fixed appetizer spacing

--- a/Appetizer.css
+++ b/Appetizer.css
@@ -121,5 +121,6 @@ article {
         font-size: 15px;
         line-height: 18px;
         font-weight: bold;
+        padding-bottom: 5%;
       }
 }
